--- a/api/mypy.ini
+++ b/api/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+plugins = mypy_django_plugin.main
 disallow_untyped_defs = True
 disallow_any_unimported = True
 no_implicit_optional = True
@@ -6,3 +7,6 @@ check_untyped_defs = True
 show_error_codes = True
 warn_return_any = True
 warn_unused_ignores = True
+
+[mypy-*.migrations.*]
+ignore_errors = True
