--- a/web/package.json
+++ b/web/package.json
@@ -4,18 +4,18 @@
   "version": "0.0.0",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
-    "typescript": "^4.7.4",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
     "vite": "^2.9.12"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=/static/",
     "preview": "vite build && vite preview",
     "upgrade": "npx npm-check-updates"
   }
