move things around again

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
+# api
 .mypy_cache
 .venv
 .env
 db.sqlite3
 static
 *.pyc
+
+# web
+logs
+*.log
+npm-debug.log*
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
