--- a/api/mypy.ini
+++ b/api/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 plugins = mypy_django_plugin.main
+cache_dir = ./api/.mypy_cache
 disallow_untyped_defs = True
 disallow_any_unimported = True
 no_implicit_optional = True
