--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --base=/static/",
+    "build": "tsc && vite build",
     "preview": "vite build && vite preview",
     "upgrade": "npx npm-check-updates"
   }
