--- a/web/package.json
+++ b/web/package.json
@@ -3,20 +3,22 @@
   "type": "module",
   "version": "0.0.0",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "serve": "^13.0.2",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
     "vite": "^2.9.12"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite build && vite preview",
-    "upgrade": "npx npm-check-updates"
+    "upgrade": "npx npm-check-updates",
+    "start": "npm run build && serve dist"
   }
 }
