--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,6 @@
     "@vitejs/plugin-react": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "serve": "^13.0.2",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
@@ -19,6 +18,6 @@
     "build": "tsc && vite build",
     "preview": "vite build && vite preview",
     "upgrade": "npx npm-check-updates",
-    "start": "npm run build && serve dist"
+    "start": "npx serve dist"
   }
 }
